# firedantic-mixin

./: README.md  firebase.json  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
firedantic_mixin/: mixin.py
test/: test_mixin.py
